Include unused felyne assets

--- a/TEXTURES/NPJB40001/textures.ini
+++ b/TEXTURES/NPJB40001/textures.ini
@@ -59,28 +59,28 @@ NPJB40001 = textures.ini
 	}
 
 	{#CLEAN
-	00000000b60d477c6eea546f = GUI/CLEAN/BATTLE_UI/GUI01.png #00000000b60d477c12c267df
-	00000000c40dff7c12c267df = GUI/CLEAN/BATTLE_UI/GUI02.png #00000000c40dff7c6eea546f
-	00000000eb5428776eea546f = GUI/CLEAN/BATTLE_UI/GUI03.png #00000000eb54287712c267df
-	000000004c929b476eea546f = GUI/CLEAN/BATTLE_UI/GUI04.png #000000004c929b4712c267df
-	000000006cafe12d6eea546f = GUI/CLEAN/BATTLE_UI/GUI05.png #000000006cafe12d12c267df
-	000000007b88278d6eea546f = GUI/CLEAN/BATTLE_UI/GUI06.png #000000007b88278d12c267df
-	000000007c5f2aaa6eea546f = GUI/CLEAN/BATTLE_UI/GUI07.png #000000007c5f2aaa12c267df
-	0000000012ac6bf76eea546f = GUI/CLEAN/BATTLE_UI/GUI08.png #0000000012ac6bf712c267df
-	0000000034d2101e6eea546f = GUI/CLEAN/BATTLE_UI/GUI09.png #0000000034d2101e12c267df
-	00000000402a96fa6eea546f = GUI/CLEAN/BATTLE_UI/GUI10.png #RED #00000000402a96fa12c267df
-	000000008dacb3bd6eea546f = GUI/CLEAN/BATTLE_UI/GUI11.png #BLUE
+	00000000b60d477c6eea546f = GUI/CLEAN/BATTLE_UI/GUI01.png # 00000000b60d477c12c267df
+	00000000c40dff7c12c267df = GUI/CLEAN/BATTLE_UI/GUI02.png # 00000000c40dff7c6eea546f
+	00000000eb5428776eea546f = GUI/CLEAN/BATTLE_UI/GUI03.png # 00000000eb54287712c267df
+	000000004c929b476eea546f = GUI/CLEAN/BATTLE_UI/GUI04.png # 000000004c929b4712c267df
+	000000006cafe12d6eea546f = GUI/CLEAN/BATTLE_UI/GUI05.png # 000000006cafe12d12c267df
+	000000007b88278d6eea546f = GUI/CLEAN/BATTLE_UI/GUI06.png # 000000007b88278d12c267df
+	000000007c5f2aaa6eea546f = GUI/CLEAN/BATTLE_UI/GUI07.png # 000000007c5f2aaa12c267df
+	0000000012ac6bf76eea546f = GUI/CLEAN/BATTLE_UI/GUI08.png # 0000000012ac6bf712c267df
+	0000000034d2101e6eea546f = GUI/CLEAN/BATTLE_UI/GUI09.png # 0000000034d2101e12c267df
+	00000000402a96fa6eea546f = GUI/CLEAN/BATTLE_UI/GUI10.png # RED #00000000402a96fa12c267df
+	000000008dacb3bd6eea546f = GUI/CLEAN/BATTLE_UI/GUI11.png # BLUE
 	00000000c40dff7c6eea546f = GUI/CLEAN/BATTLE_UI/GUI12.png
 	00000000d257a8246eea546f = GUI/CLEAN/BATTLE_UI/GUI13.png
 	000000003e2b7f506eea546f = GUI/CLEAN/BATTLE_UI/GUI14.png
 	000000004fd0cad76eea546f = GUI/CLEAN/BATTLE_UI/GUI15.png
 	00000000960b70116eea546f = GUI/CLEAN/BATTLE_UI/GUI16.png
 
-	00000000b01d2c511745cad8 = GUI/CLEAN/BUTTONS/BUTTONS01.png #00000000b01d2c518aad6963
-	00000000bd4c98881745cad8 = GUI/CLEAN/BUTTONS/BUTTONS02.png #00000000bd4c98888aad6963
+	00000000b01d2c511745cad8 = GUI/CLEAN/BUTTONS/BUTTONS01.png # 00000000b01d2c518aad6963
+	00000000bd4c98881745cad8 = GUI/CLEAN/BUTTONS/BUTTONS02.png # 00000000bd4c98888aad6963
 	000000001d5e6df78aad6963 = GUI/CLEAN/BUTTONS/BUTTONS03.png
-	0000000030f00fa21745cad8 = GUI/CLEAN/BUTTONS/BUTTONS04.png #RED weapons #0000000030f00fa28aad6963
-	00000000e1d58a8d1745cad8 = GUI/CLEAN/BUTTONS/BUTTONS05.png #BLUE weapons #00000000e1d58a8d8aad6963
+	0000000030f00fa21745cad8 = GUI/CLEAN/BUTTONS/BUTTONS04.png # RED weapons #0000000030f00fa28aad6963
+	00000000e1d58a8d1745cad8 = GUI/CLEAN/BUTTONS/BUTTONS05.png # BLUE weapons #00000000e1d58a8d8aad6963
 	00000000bb954ab21745cad8 = GUI/CLEAN/BUTTONS/BUTTONS06.png
 	00000000bfd423f81745cad8 = GUI/CLEAN/BUTTONS/BUTTONS07.png
 	00000000ef3a60521745cad8 = GUI/CLEAN/BUTTONS/BUTTONS08.png
@@ -90,15 +90,15 @@ NPJB40001 = textures.ini
 	00000000949bea421745cad8 = GUI/CLEAN/BUTTONS/BUTTONS12.png
 	000000006749e0461745cad8 = GUI/CLEAN/BUTTONS/BUTTONS13.png
 	00000000595835381745cad8 = GUI/CLEAN/BUTTONS/BUTTONS14.png
-	00000000252f34fa1745cad8 = GUI/CLEAN/BUTTONS/BUTTONS15.png #YELLOW
+	00000000252f34fa1745cad8 = GUI/CLEAN/BUTTONS/BUTTONS15.png # YELLOW
 
-	000000004c92904a5ce3e8e1 = GUI/CLEAN/HPBAR.png #000000004c92904a77a44b05
-	000000004c92904a28975e78 = GUI/CLEAN/STAMINABAR.png #000000004c92904ac9935435
+	000000004c92904a5ce3e8e1 = GUI/CLEAN/HPBAR.png # 000000004c92904a77a44b05
+	000000004c92904a28975e78 = GUI/CLEAN/STAMINABAR.png # 000000004c92904ac9935435
 
-	00000000fc273a0500000000 = LOADINGSCREEN.png #093af7d0fc273a0500000000
+	00000000fc273a0500000000 = LOADINGSCREEN.png # 093af7d0fc273a0500000000
 
-	000000003225cae4a674c4cf = STARTMENU01.png #093f03103225cae4d5dcc652
-	000000007086584accdf74b8 = STARTMENU01ELEMENTS.png #093e7ee07086584a103889b2
+	000000003225cae4a674c4cf = STARTMENU01.png # 093f03103225cae4d5dcc652
+	000000007086584accdf74b8 = STARTMENU01ELEMENTS.png # 093e7ee07086584a103889b2
 	}
 
 	{#ICONS
@@ -111,12 +111,17 @@ NPJB40001 = textures.ini
 
 {#CHARACTER
 #FEMALE
-000000005807c858a6bfad05 = FEMALESKIN.png #096530600fec93ed3c6284ee
+000000005807c858a6bfad05 = FEMALESKIN.png # 096530600fec93ed3c6284ee
+000000002cf30b1c2fa7fae2 = FEMALEFACE01.png
 }
 
 {#FELYNE
-000000000a7aa9e24f6a929e = FELYNE/001.png
-00000000bd807cc9645f87a3 = FELYNE/002.png
+000000000a7aa9e24f6a929e = FELYNE/000000000a7aa9e24f6a929e.png # 001.png
+00000000bd807cc9645f87a3 = FELYNE/00000000bd807cc9645f87a3.png # 002.png
+
+#UNKNOWN
+00000000a5f73a1b2a31a00e = 00000000a5f73a1b2a31a00e.png
+00000000678c66f3d28ea2a0 = 00000000678c66f3d28ea2a0.png
 
 	{#ARMOR - HEAD
 	0000000000cc70ffb6fb3410 = FELYNE/ARMOR/HEAD/001.png
@@ -127,9 +132,9 @@ NPJB40001 = textures.ini
 	00000000bf757963741896f2 = FELYNE/ARMOR/HEAD/006.png
 	00000000c4c3790d73358174 = FELYNE/ARMOR/HEAD/007.png
 	00000000c54b573640cce250 = FELYNE/ARMOR/HEAD/008.png
-	00000000da97a04ef72f5def = FELYNE/ARMOR/HEAD/009.png
+	00000000da97a04ef72f5def = FELYNE/ARMOR/HEAD/00000000da97a04ef72f5def.png # 009.png
 	00000000da372d3266b6213a = FELYNE/ARMOR/HEAD/010.png
-	00000000e7c2492dbb51fe87 = FELYNE/ARMOR/HEAD/011.png
+	00000000e7c2492dbb51fe87 = FELYNE/ARMOR/HEAD/00000000e7c2492dbb51fe87.png # 011.png
 	00000000e1265ac72ba08afd = FELYNE/ARMOR/HEAD/012.png
 	00000000e2660cfc73358174 = FELYNE/ARMOR/HEAD/013.png
 	00000000e907921c989f38a9 = FELYNE/ARMOR/HEAD/014.png
@@ -211,8 +216,6 @@ NPJB40001 = textures.ini
 00000000203d1617606a1f68 = ARMOR/VOLVIDON/004.png
 00000000770806a0077ea394 = ARMOR/VOLVIDON/005.png
 000000000046661990eb3615 = ARMOR/VOLVIDON/006.png
-
-000000002cf30b1c2fa7fae2 = FEMALEFACE01.png
 }
 
 {#WEAPONS
@@ -307,7 +310,7 @@ NPJB40001 = textures.ini
 	00000000000008081f7676e6 = MONSTERS/AGGRESSIVE/rathian_body_03.png
 
 	#RHENOPLOS
-	000000005ff899020d42557d = MONSTERS/AGGRESSIVE/rhenoplos_01.png #000000005ff899022434716c
+	000000005ff899020d42557d = MONSTERS/AGGRESSIVE/rhenoplos_01.png # 000000005ff899022434716c
 
 	#GREAT_JAGGI
 	00000000b0d13e6206b7fdf5 = MONSTERS/AGGRESSIVE/great_jaggi_01.png
